タイトルを間違えていた

--- a/devtools.html
+++ b/devtools.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Cond Checker for KanColle</title>
+<title>KanColle Cond Checker</title>
 <script src="devtools.js"></script>
 
