検算用サンプルデータを夜戦有りのものに置き換える

--- a/guess-win-test.html
+++ b/guess-win-test.html
@@ -115,29 +115,29 @@ function parse_input() {
 <h2>戦闘ログ</h2>
 <form name="fm">
 <textarea name="input" rows="20" cols="100">
-2015/3/17 2:18:49
-鎮守府正面海域 battle2
+2015/4/1 23:12:00
+キス島沖 battle1
 
-1-1-3(boss):8
-単縦/同航/単縦
-索敵: なし
-制空権確保
+3-2-2:89
+緒戦被害:f_damage:12/72(17%)[0/2]95, e_damage:118/233(51%)[2/6], rate:3, 推定:B
+戦闘被害:f_damage:36/72(50%)[0/2]95, e_damage:118/233(51%)[2/6], chase_rate:1.1
 勝敗推定:C
 friend damage
-第1艦隊
-1(あきつ丸改Lv73). 36/40:.
-2(まるゆLv11). 1/6(-5):大破!!!
+だいいちかんたい
+1(叢雲改Lv27).	28/30:.
+2(蒼龍改Lv39).	8/65(-24):大破!!!
 被撃墜数: 0
 enemy damage
-1(軽巡ホ級Lv1). 33/33:*
-2(駆逐ロ級Lv1). 0/22(-68):撃沈---
-3(駆逐ロ級Lv1). 22/22:*
+1(雷巡チ級eliteLv1).	50/50:*
+2(雷巡チ級Lv1).	0/48:撃沈---
+3(雷巡チ級Lv1).	29/48:小破
+4(駆逐ロ級flagshipLv1).	14/43:中破
+5(駆逐ロ級Lv1).	22/22:*
+6(駆逐ロ級Lv1).	0/22:撃沈---
 battle result
-敵主力艦隊(1/3):B
-勝敗推定ミス f_damage:5/42(12%), e_damage:22/77(29%)
-MVP: あきつ丸改Lv73 +90exp
-drop ship
-駆逐艦:曙
+敵水雷戦隊(2/6):C
+MVP: 叢雲改Lv27 +768exp
+
 </textarea>
 <input type="button" value="検算" onclick="parse_input()"></input>
 </form>
