--- a/devtools.html
+++ b/devtools.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>KanColle Cond Checker</title>
+<script src="newship.js"></script>
 <script src="devtools.js"></script>
 
